fixed spacing on home

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -226,13 +226,13 @@ pre {
 }
 
 .test-col-1 {
-    width: -webkit-calc(47% - (#{$spacing-unit} / 2));
-    width:         calc(47% - (#{$spacing-unit} / 2));
+    width: -webkit-calc(50% - (#{$spacing-unit} / 2));
+    width:         calc(50% - (#{$spacing-unit} / 2));
 }
 
 .test-col-2 {
-    width: -webkit-calc(47% - (#{$spacing-unit} / 2));
-    width:         calc(47% - (#{$spacing-unit} / 2));
+    width: -webkit-calc(50% - (#{$spacing-unit} / 2));
+    width:         calc(50% - (#{$spacing-unit} / 2));
 }
 
 @include media-query($on-laptop) {
